--- a/gist/BradyBunchExercise.ipynb
+++ b/gist/BradyBunchExercise.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -34,14 +34,12 @@
     "                                                     np.var(bradys['ages']), \n",
     "                                                     np.std(bradys['ages']),\n",
     "                                                     np.median(bradys['ages']),\n",
-    "                                                    statistics.mode(bradys['ages'])\n",
-    "                                                               )\n",
-    "     )"
+    "                                                    statistics.mode(bradys['ages'])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -59,21 +57,20 @@
     "                                                     np.var(bradys['ages']), \n",
     "                                                     np.std(bradys['ages']),\n",
     "                                                     np.median(bradys['ages']),\n",
-    "                                                    statistics.mode(bradys['ages'])\n",
-    "                                                               )\n",
-    "     )"
+    "                                                    statistics.mode(bradys['ages'])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mode=0\n"
+      "mode=None\n",
+      "Brady average=9.0, variance=15.428571428571429, std=3.927922024247863, median=10.0, mode=None\n"
      ]
     }
    ],
@@ -85,68 +82,14 @@
     "    mode = statistics.mode(bradys['ages'])\n",
     "                           \n",
     "except:\n",
-    "    mode = 0\n",
+    "    mode = None\n",
     "    print(\"mode={}\".format(mode))\n",
     "                           \n",
-    "# print(\"Brady average={}, variance={}, std={}, median={}, mode={}\".format(np.mean(bradys['ages']), \n",
-    "#                                                      np.var(bradys['ages']), \n",
-    "#                                                      np.std(bradys['ages']),\n",
-    "#                                                      np.median(bradys['ages']),\n",
-    "#                                                      mode)\n",
-    "#                                                                )\n",
-    "#      )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>\n",
-       "    div#notebook-container    { width: 95%; }\n",
-       "    div#menubar-container     { width: 65%; }\n",
-       "    div#maintoolbar-container { width: 99%; }\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from IPython.display import display, HTML\n",
-    "\n",
-    "display(HTML(data=\"\"\"\n",
-    "<style>\n",
-    "    div#notebook-container    { width: 95%; }\n",
-    "    div#menubar-container     { width: 65%; }\n",
-    "    div#maintoolbar-container { width: 99%; }\n",
-    "</style>\n",
-    "\"\"\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"hi2\")"
+    "print(\"Brady average={}, variance={}, std={}, median={}, mode={}\".format(np.mean(bradys['ages']), \n",
+    "                                                     np.var(bradys['ages']), \n",
+    "                                                     np.std(bradys['ages']),\n",
+    "                                                     np.median(bradys['ages']),\n",
+    "                                                     mode))"
    ]
   },
   {
