--- a/Datafiles/Unit2Lesson2Project4.ipynb
+++ b/Datafiles/Unit2Lesson2Project4.ipynb
@@ -18,24 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df.groupby('operator').size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# operators = ['Aeroflot', 'China Air Lines']\n",
     "# df.groupby('operator')['operator'].size().isin(operators)"
    ]
@@ -52,44 +34,6 @@
     "#filename = '/Users/lou/GITHubProjects/Thinkful/Datafiles/planecrashinfo_20181121001952.csv'\n",
     "filename = '/Users/lou/GITHubProjects/Thinkful/Datafiles/purchases.csv'\n",
     "df = pd.read_csv(filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this works too!!!\n",
-    "df2 = df['ad_views']\n",
-    "# plt.ylim([40, 80])\n",
-    "plt.ylabel('Stuff')\n",
-    "# plt.plot(df2, color='green')\n",
-    "# plt.scatter(x = df['ad_views'], y = df['items_purchased'])\n",
-    "plt.hist(df2)\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Build our histogram. Let's go ahead and set the color too.\n",
-    "plt.hist(df['ad_views'], bins=40, color='blue')\n",
-    "plt.title('Great Demo Demo')\n",
-    "plt.xlabel('Random Values')\n",
-    "plt.show()"
    ]
   },
   {
@@ -153,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -338,21 +282,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "there are now 5719 clean rows of data in crashes_df.\n",
-      "Index(['country_code', 'operator_code', 'ac_type', 'aboard_count',\n",
-      "       'fatal_count', 'ground'],\n",
-      "      dtype='object')\n",
-      "We are working with 74 airline crashes, rows of more than 150 fatalities.\n",
       "For df crashes_df_country, the columns are Index(['country_code', 'aboard_count', 'fatal_count', 'ground'], dtype='object')\n",
       "For df crashes_df_country, the columns are Index(['operator_code', 'aboard_count', 'fatal_count', 'ground'], dtype='object')\n",
       "For df crashes_df_country, the columns are Index(['ac_type', 'aboard_count', 'fatal_count', 'ground'], dtype='object')\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'DataFrame' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-f6e3f6aa59d1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;31m# df.groupby(['cluster']).mean()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m \u001b[0mgroup_by_country_code\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcrashes_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'country_code'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m \u001b[0;31m# group_by_country_code = crashes_df[['country_code','aboard_count','fatal_count','ground']].groupby(['country_code'])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;31m# group_by_country_code  = crashes_df.groupby(['country_code'])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'DataFrame' object is not callable"
      ]
     }
    ],
@@ -379,21 +329,37 @@
     "crashes_df['ground']       = pd.to_numeric(crashes_df['ground'])\n",
     "crashes_df['aboard_count'] = pd.to_numeric(crashes_df['aboard_count'])\n",
     "crashes_df['fatal_count']  = pd.to_numeric(crashes_df['fatal_count'])\n",
-    "print(\"there are now {} clean rows of data in crashes_df.\".format(len(crashes_df)))\n",
-    "print(crashes_df.columns)\n",
+    "# print(\"there are now {} clean rows of data in crashes_df.\".format(len(crashes_df)))\n",
+    "# print(crashes_df.columns)\n",
     "\n",
     "FATALITIES = 150\n",
     "# we only want big crashes, more than n fatalties\n",
     "crashes_big = crashes_df[(crashes_df['fatal_count']  > FATALITIES)]\n",
     "crashes_df = crashes_big\n",
-    "print(\"We are working with {} airline crashes, rows of more than {} fatalities.\".format(len(crashes_df), FATALITIES))\n",
+    "# print(\"We are working with {} airline crashes, rows of more than {} fatalities.\".format(len(crashes_df), FATALITIES))\n",
     "\n",
     "crashes_df_country = crashes_df[['country_code', 'aboard_count', 'fatal_count', 'ground']]\n",
     "crashes_df_operator = crashes_df[['operator_code', 'aboard_count', 'fatal_count', 'ground']]\n",
     "crashes_df_ac_type = crashes_df[['ac_type', 'aboard_count', 'fatal_count', 'ground']]\n",
     "print(\"For df crashes_df_country, the columns are {}\".format(crashes_df_country.columns))\n",
     "print(\"For df crashes_df_country, the columns are {}\".format(crashes_df_operator.columns))\n",
-    "print(\"For df crashes_df_country, the columns are {}\".format(crashes_df_ac_type.columns))"
+    "print(\"For df crashes_df_country, the columns are {}\".format(crashes_df_ac_type.columns))\n",
+    "\n",
+    "# df.groupby(['cluster']).mean() \n",
+    "group_by_country_code = crashes_df(['country_code']).mean()\n",
+    "# group_by_country_code = crashes_df[['country_code','aboard_count','fatal_count','ground']].groupby(['country_code'])\n",
+    "# group_by_country_code  = crashes_df.groupby(['country_code'])\n",
+    "# group_by_operator_code = crashes_df.groupby(['operator_code'])\n",
+    "# sample = group_by_country_code[['country_code','ground', 'aboard_count', 'fatal_count']].tail(2)\n",
+    "# print(sample)\n",
+    "# group_by_ac_type       = crashes_df.groupby(by=['ac_type'])\n",
+    "# group_by_country_code.columns\n",
+    "# crashes_data_avg_country  = group_by_country_code.mean() # checking this one\n",
+    "# crashes_data_avg_operator  = group_by_operator_code.mean()\n",
+    "# crashes_data_avg_ac_type  = group_by_ac_type.mean()\n",
+    "# crashes_data_count_country  = group_by_country_code.count()\n",
+    "# crashes_data_count_operator  = group_by_operator_code.count()\n",
+    "# crashes_data_count_ac_type  = group_by_ac_type.count()"
    ]
   },
   {
@@ -936,50 +902,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "good\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 'this is good'\n",
-    "if x.isalpha:\n",
-    "    print('good')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "df.columns\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-83-b666bf274d0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
@@ -1012,28 +938,6 @@
     "# pd.to_numeric(crashes_df['aboard_count']).head(20)\n",
     "crashes_df['aboard_count'].head(10)\n",
     "# crashes.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['country_code', 'operator_code', 'ac_type', 'aboard_count',\n",
-       "       'fatal_count', 'ground', 'ground2'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "crashes_df.columns"
    ]
   },
   {
