Fixed some punctuation, and proofread it.

--- a/HomeworkProjects/Unit1/Lesson5/NYC_BikeShare_WomensIncentive.ipynb
+++ b/HomeworkProjects/Unit1/Lesson5/NYC_BikeShare_WomensIncentive.ipynb
@@ -29,33 +29,20 @@
    "outputs": [],
    "source": [
     "# Let's read in the data set\n",
+    "\n",
     "DataFilePath = '../../../Datafiles'\n",
-    "df = pd.read_csv(DataFilePath + '/CityBikesProject3.csv.gz', compression='gzip', header=0, sep=',', quotechar='\"')\n",
+    "df = pd.read_csv(DataFilePath + '/CityBikesProject3.csv.gz', \n",
+    "                 compression='gzip', header=0, sep=',', quotechar='\"')\n",
     "df['age'] = 2018 - df['birth year'] # We are calculation the age of the rider\n",
     "df['distance'] = df['distance'].astype(int) # Want to do a count on the integer miles ridden\n",
     "df['speed'] = df['distance']/(df['tripduration']/3600)\n",
     "df['starttime'] = pd.to_datetime(df['starttime'])\n",
     "df['stoptime'] =  pd.to_datetime(df['stoptime'])\n",
-    "df['speed'] = df['distance']/(df['tripduration']/3600)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df['speed'] = df['distance']/(df['tripduration']/3600)\n",
     "df['test'] = 0           # create the column to store the status of the treatment candidates\n",
     "df['campaign_date'] = \"\" # Column to store the date the e-mails were sent out \n",
     "df['is_signed_up'] = 0   # Date the candidate signed up\n",
     "df['signup_date'] = 0    # Set to 0 if part of control group, and 1 if part of the test group"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](CityBikesNYCRidingPicture.png)"
    ]
   },
   {
@@ -69,11 +56,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will be working with the Citi Bike data from the largest bike share program in the United States.  This dataset includes the rental information for all bike share information for New York City, including Manhattan, Brooklyn, Queens, and Jersey City.  This program encompasses 13,046 bikes, and 763 stations.  \n",
+    "We will be working with the NYC Citi Bike data from the largest bike share program in the United States.  This dataset includes the rental information for all bike share information for New York City, including Manhattan, Brooklyn, Queens, and Jersey City.  This program encompasses 13,046 bikes, and 763 stations.  \n",
     "\n",
-    "The data presented here is from the calendar year 2018, all 12 months.  The dataset includes 1 table which came from 12 months of csv files that were appended together. There are 1,016,505 rows in the current dataset.\n",
-    "\n",
-    "This "
+    "The data presented here is from the calendar year 2018, all 12 months.  The dataset includes 1 table which came from 12 months of csv files that were appended together. There are 1,016,505 rows in the current dataset."
    ]
   },
   {
@@ -87,12 +72,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The NYC Bike share program is popular, and what we have noticed in the ridership is that there are 3 male riders for every 1 rider.  \n",
+    "The NYC Bike share program is popular, and what we have noticed in the ridership is that there are approximately 3 male riders for every 1 female rider.  \n",
     "\n",
     "We are planning to launch this with an e-mail campaign, targeting female riders, between the ages of 25 and 40.  We will offer this program to them, with the incentive for them being lower cycling fees in the bike share program.\n",
     "\n",
     "We will be conducting this survey from within the NYC Bike Share company, knowing that it will not require large resources to conduct the campaign.\n",
-    "\n",
     "\n",
     "We are planning to make the ride share program more attractive for female riders, by introducing an email campaign, to give them incentives to ride more frequently.  We plan to offer this program to women, between the ages of 25 and 40, with the intent to increase the ridership.  We hope for it to grow the demand for the program.    "
    ]
@@ -111,10 +95,10 @@
     "**The Problem**\n",
     "The big question:  How can we increase the ridership for women in NYC, through the NYC BikeShare program?\n",
     "\n",
-    "Currently the women that ride in the program account for 23% of the ridership, with male riders dominant.  We are assuming that the pricing is keeping them off the bikes, and given that assumption, perhaps we can create some incentive.  We also would assume that the target market would have monthly bike share accounts, to get the full benefit of this program.\n",
+    "Currently the women that ride in the program account for 23% of the ridership, with male riders dominant.  We are assuming that the pricing is keeping them off the bikes, and given that assumption, perhaps we can create an incentive.  We also would assume that the target market would have monthly bike share accounts, to get the full benefit of this program.\n",
     "\n",
     "**The Potential Solution**\n",
-    "The solution we are suggesting is to provide bike rental incentives for women, between the ages of 25, and 40, who ride more than 100 miles a month.  This would encourage them to ride at lower rates, and to stay healthy, and get outside, and get on the bike.  Women that ride 100 miles per month could be given discounts on the montly membership.\n",
+    "The solution we are suggesting is to provide bike rental incentives for women, between the ages of 25, and 40, who ride more than 100 miles a month.  This would encourage them to ride at lower rates, and to stay healthy, and get outside, and get on the bike.  Women that ride 100 miles per month could be given discounts on their monthly membership.\n",
     "\n",
     "**The Method of testing the solution**\n",
     "The steps to determine if this program would entail the following steps:\n",
@@ -122,7 +106,7 @@
     "     1. Have monthly bike share memberships\n",
     "     1. Are between the ages of 25 and 40  \n",
     "1.  Send them an e-mail offer that would:\n",
-    "    1. Allow them to get up to 25% off of all bike share rentals\n",
+    "    1. Allow them to get up to 25% off of all bike share rentals in the following month\n",
     "        1. 10% off all bike rides in the month if they ride 100 miles during the month\n",
     "        1. 15% off all bike rides in the month if they ride 200 miles during the month\n",
     "        1. 25% off all bike rides in the month if they ride 300 miles during the month\n",
@@ -146,8 +130,8 @@
     "    1.  Measure the effectiveness of the overall campaign.\n",
     "    \n",
     "## Suggestions for the campaign\n",
-    "1.  Conduct campaign during a conflicting campaign, or during a major national event, that could diminish the effectiveness of the measurement.\n",
-    "1.  Avoid starting the campaign during the Winter, or Fall.  Best time would be Spring.\n"
+    "1.  Avoid conducting the campaign during a conflicting campaign, or during a major national event, that could diminish the effectiveness of the program.\n",
+    "1.  Avoid starting the campaign during the Winter, or Fall.  Best time would be Spring, leading into Summer."
    ]
   },
   {
@@ -282,12 +266,13 @@
     "    1. 10% of all of the overall candidates have signed up.\n",
     "        1.  If they have, then we continue to Phase III of the program; else we terminate here.<br></br>\n",
     "11.  Pick another 25% of the target market, new candidates, similarly to step #1<br></br>\n",
-    "12.  2.  Flag their user account, as being a member of the test program, by setting the value to 1.<br></br>\n",
+    "12.  Flag their user account, as being a member of the test program, by setting the value to 1.<br></br>\n",
     "13.  Send them an e-mail proposal for the program, similarly to step #3 above.\n",
     "14.  If they accept the proposal, we update their account with the signup date, and is_signup flag.<br></br>\n",
-    "15.  Gather the results after 1 month, to determine if:\n",
+    "15.  Gather the results after 3 month, to determine if:\n",
     "     1.  10% of the campaign were accepted\n",
-    "         1.  If they have, then we continue to the general acceptance of the program, and perform a similar process as above, except it is for the remaining 50% candiates; else we terminate here.<br></br>"
+    "         1.  If they have, then we continue to the general acceptance of the program, and perform a similar process as above, except it is for the remaining 50% candiates; else we terminate here.<br></br>\n",
+    "Continue"
    ]
   },
   {
