Final review complete with Jason

--- a/HomeworkProjects/Unit1/Lesson5/NYC_BikeShare_WomensIncentive.ipynb
+++ b/HomeworkProjects/Unit1/Lesson5/NYC_BikeShare_WomensIncentive.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "###  Revision History\n",
-    "31-Mar-2019    1.0    Lou Pendley    Data Science Bootcamp Unit 1 Capstone"
+    "01-Apr-2019    1.0    Lou Pendley    Data Science Bootcamp Unit 1 Capstone"
    ]
   },
   {
@@ -122,16 +122,17 @@
     "    1.  Measure the signup rate\n",
     "        1. Signup rates criteria the same as for section #3\n",
     "1.  Phased Implementation - **Phase III**\n",
-    "    1.  Third month, send out e-mails to 25% more of the target market\n",
-    "    1.  Measure the signup rate\n",
-    "        1.  Signup rates criteria the same as for section #3\n",
-    "1.  Phased Implementation - **Phase IV**\n",
-    "    1.  Fourth month, send out e-mails to the remaining 50% of the target market\n",
-    "    1.  Measure the effectiveness of the overall campaign.\n",
+    "    1.  Third month, send out e-mails to the remaining 50% of the target market\n",
     "    \n",
     "## Suggestions for the campaign\n",
     "1.  Avoid conducting the campaign during a conflicting campaign, or during a major national event, that could diminish the effectiveness of the program.\n",
-    "1.  Avoid starting the campaign during the Winter, or Fall.  Best time would be Spring, leading into Summer."
+    "1.  Avoid starting the campaign during the Winter, or Fall.  Best time would be Spring, leading into Summer.\n",
+    "\n",
+    "## Post rollout cancellation clause\n",
+    "The campaign may need to be cancelled under certain conditions, that would make it sub-optimal to continue.  \n",
+    "These conditions would include the following:\n",
+    "1.  Weather conditions that would be dangerous, extrement, or inappropriate for cycling safety.\n",
+    "1.  Technical glitches in the e-mail delivery. "
    ]
   },
   {
@@ -244,9 +245,9 @@
    "source": [
     "## Rollout Plan\n",
     "\n",
-    "The rollout will consist of the following:\n",
+    "The rollout will consist of the following sending e-mails to the B group, the test group:\n",
     "\n",
-    "1.  Pick 10% of the target market, women, between 25 and 40, who are in good standing with the bike share program<br></br>\n",
+    "1.  Pick 10% of the target market, women, between 25 and 40, who are in good standing with the bike share program, and ride at least 10 miles per month<br></br>\n",
     "2.  Flag their user account, as being a member of the test program, by setting the value to 1.<br></br>\n",
     "3.  Send them an e-mail proposal for the program, how it works:\n",
     "    1. If they ride:\n",
@@ -258,6 +259,7 @@
     "5.  Gather the results after 1 month, to determine if:\n",
     "    1.  10% of the campaign were accepted\n",
     "        1.  If they have, then we continue to Phase II of the program; else we terminate here.<br></br>\n",
+    "5.  Send an e-mail to 10% of the A group, the women in the control group, encouraging them to ride during the Spring and summer months.\n",
     "6.  Pick another 15% of the target market, new candidates, similarly to step #1<br></br>\n",
     "7.  Flag their user account, as being a member of the test program, by setting the value to 1.\n",
     "8.  Send them an e-mail proposal for the program, similarly to step #3 above.\n",
@@ -265,14 +267,15 @@
     "10. Gather the results after month 2, to determine if:\n",
     "    1. 10% of all of the overall candidates have signed up.\n",
     "        1.  If they have, then we continue to Phase III of the program; else we terminate here.<br></br>\n",
-    "11.  Pick another 25% of the target market, new candidates, similarly to step #1<br></br>\n",
+    "10. Send an e-mail to 15% new members the A group, the women in the control group, encouraging them to ride during the Spring and summer months.\n",
+    "11.  Pick the remaining 50% of the target market, new candidates, similarly to step #1<br></br>\n",
     "12.  Flag their user account, as being a member of the test program, by setting the value to 1.<br></br>\n",
     "13.  Send them an e-mail proposal for the program, similarly to step #3 above.\n",
     "14.  If they accept the proposal, we update their account with the signup date, and is_signup flag.<br></br>\n",
     "15.  Gather the results after 3 month, to determine if:\n",
-    "     1.  10% of the campaign were accepted\n",
-    "         1.  If they have, then we continue to the general acceptance of the program, and perform a similar process as above, except it is for the remaining 50% candiates; else we terminate here.<br></br>\n",
-    "Continue"
+    "     1.  10% of the campaign were accepted to understand the overall effectiveness of the program.\n",
+    "16.  Send an e-mail to the remaining members of the A group, the women in the control group, encouraging them to ride during the Spring and summer months.\n",
+    "17.  We will be measuring the two groups, the A group (control group), against the B group (test group).\n"
    ]
   },
   {
