--- a/HomeworkProjects/Unit2/Lesson1/Project8/PreparingADatasetForModeling.ipynb
+++ b/HomeworkProjects/Unit2/Lesson1/Project8/PreparingADatasetForModeling.ipynb
@@ -38,53 +38,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     Chris Pratt\n",
-       "1    Noomi Rapace\n",
-       "Name: first_actor, dtype: object"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['first_actor'].head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "536       Action\n",
-       "513    Adventure\n",
-       "747       Comedy\n",
-       "197    Adventure\n",
-       "674       Action\n",
-       "Name: first_genre, dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['first_genre'].sample(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -219,6 +172,59 @@
     "df_first_genre_grouped=df.groupby(grouping_columns )['first_actor'].agg(['count']) \n",
     "df_first_genre_grouped=df_first_genre_grouped.sort_values(by=sort_by_aggregate, ascending=False)\n",
     "print(df_first_genre_grouped)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's do the Univariate analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. How many variables do I have? \n",
+    "|Variable | Type | Clean Data\n",
+    "  1. Rank\n",
+    "  1. Title\n",
+    "  1. Genre\n",
+    "  1. Description\n",
+    "  1. Director\n",
+    "  1. Actors\n",
+    "  1. Year\n",
+    "  1. Runtime(minutes)\n",
+    "  1. Rating\n",
+    "  1. Votes\n",
+    "  1. Revenue\n",
+    "  1. Metascore\n",
+    "1. How many data points?\n",
+    "    1.  We have 1,000 movies in this dataset\n",
+    "1. Which variables are categorical, and which are continuous?\n",
+    "1. Do any of my variables have a known probability distribution?\n",
+    "1. Do I have missing data?\n",
+    "    1. If so, how much?\n",
+    "1. How much variance is there in each of my variables?\n",
+    "\n",
+    "Do some visualizations of the variables we are going to use."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## To do's  \n",
+    "1.  Plot each variable\n",
+    "1.  Describe each variable we are going to use\n",
+    "1. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's do the Bivariate analysis"
    ]
   },
   {
