Today's partial changes

--- a/HomeworkProjects/Unit2/Lesson1/Project8/PreparingADatasetForModeling.ipynb
+++ b/HomeworkProjects/Unit2/Lesson1/Project8/PreparingADatasetForModeling.ipynb
@@ -185,29 +185,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. How many variables do I have? \n",
-    "|Variable | Type | Clean Data\n",
-    "  1. Rank\n",
-    "  1. Title\n",
-    "  1. Genre\n",
-    "  1. Description\n",
-    "  1. Director\n",
-    "  1. Actors\n",
-    "  1. Year\n",
-    "  1. Runtime(minutes)\n",
-    "  1. Rating\n",
-    "  1. Votes\n",
-    "  1. Revenue\n",
-    "  1. Metascore\n",
+    "1. How many variables do I have?  \n",
+    "\n",
+    "|:Variable|:Type|:Clean Data|To Use?|\n",
+    "|----------|-------|-------|-----|\n",
+    "|Rank|Continuous Ratio|Yes|No| \n",
+    "|Title|Other|Yes|No|\n",
+    "|Genre|Categorical|Yes|Yes(first_genre)|\n",
+    "|Description|Other|Yes|No|\n",
+    "|Director|Categorical|Yes|Yes|\n",
+    "|Actors|Categorical|Yes|Yes(first_actor)|\n",
+    "|Year|Continuous: Ratio|Yes|No|\n",
+    "|Runtime(minutes)|Continuous: Ratio|Yes|No|\n",
+    "|Rating|Categorical|Yes|Yes|\n",
+    "|Votes|Continuous: Interval|Yes|Yes|\n",
+    "|Revenue|Continuous: Ratio|Yes|Yes|\n",
+    "|Metascore|Continuous: Ratio|Yes|Yes|\n",
+    "\n",
+    "\n",
     "1. How many data points?\n",
     "    1.  We have 1,000 movies in this dataset\n",
     "1. Which variables are categorical, and which are continuous?\n",
+    "    1. See table 1 above.\n",
     "1. Do any of my variables have a known probability distribution?\n",
     "1. Do I have missing data?\n",
     "    1. If so, how much?\n",
     "1. How much variance is there in each of my variables?\n",
     "\n",
     "Do some visualizations of the variables we are going to use."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-26c58007f160>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-26c58007f160>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    df.plot(y=, kind='bar', label='Count of rides in 2018', figsize=(16,14));\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# df.plot(y=, kind='bar', label='Count of rides in 2018', figsize=(16,14));"
    ]
   },
   {
