Fixed subplots take a few more formatting changes

--- a/HomeworkProjects/Unit2/Lesson2/Project7/Project7_Sentiment_Analysis.ipynb
+++ b/HomeworkProjects/Unit2/Lesson2/Project7/Project7_Sentiment_Analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,12 +102,12 @@
     "        (t1 != y_pred).sum()\n",
     "    )\n",
     "\n",
-    "    return (return_message, d1.shape[0], (t1 != y_pred).sum())"
+    "    return (return_message, d1.shape[0], (t1 != y_pred).sum(), (t1 != y_pred).sum()/d1.shape[0] )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -188,11 +188,11 @@
      "output_type": "stream",
      "text": [
       "Now processing file amazon_cells_labelled.txt\n",
-      "y=1000, z=414\n",
+      "y=1000, z=414, and this model was correct 41.40% percent of the time\n",
       "Now processing file imdb_labelled.txt\n",
-      "y=748, z=305\n",
+      "y=748, z=305, and this model was correct 40.78% percent of the time\n",
       "Now processing file yelp_labelled.txt\n",
-      "y=1000, z=353\n",
+      "y=1000, z=353, and this model was correct 35.30% percent of the time\n",
       "That's all folks!!!\n"
      ]
     },
@@ -217,8 +217,8 @@
     "    do_the_keywords()\n",
     "    do_the_heatmap(subplotnum)\n",
     "    set_data_and_target()\n",
-    "    xmsg, y, z = run_Bernoulli_supervised_learning(data, target)\n",
-    "    print(\"y={}, z={}\".format(y, z))\n",
+    "    xmsg, y, z, z2 = run_Bernoulli_supervised_learning(data, target)\n",
+    "    print(\"y={0}, z={1}, and this model was correct {2:.2f}% percent of the time\".format(y, z, z/y*100, z2*100))\n",
     "    sentiment_raw = pd.DataFrame()\n",
     "    subplotnum += 1\n",
     "print(\"That's all folks!!!\")"
